# bulk_user_import

./: README.md  setup.cfg
bulk_user_import/: __init__.py  admin.py  apps.py  models.py  profiles.py  resources.py
bulk_user_import.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: settings.py  test_import.py
