[metadata]
name = bulk-user-import
version = 0.1.1
description = Bulk register users via CSV from Django Admin
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

[options]
packages = find:
include_package_data = True
install_requires =
    Django>=2.2
    django-import-export>=2.5

[options.packages.find]
exclude =
    tests*
